// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles a link without a preceding slash (for tokenAuth nextURL handling) 1`] = `
Object {
  "action": Object {
    "params": Object {
      "id": "8190",
    },
    "routeName": "PostDetails",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a member profile link 1`] = `
Object {
  "action": Object {
    "params": Object {
      "id": "1234",
    },
    "routeName": "MemberProfile",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a members index link 1`] = `
Object {
  "action": Object {
    "routeName": "Members",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a members link 1`] = `
Object {
  "action": Object {
    "routeName": "Members",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a network post link 1`] = `
Object {
  "action": Object {
    "params": Object {
      "id": "1234",
    },
    "routeName": "PostDetails",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a post link 1`] = `
Object {
  "action": Object {
    "params": Object {
      "id": "8190",
    },
    "routeName": "PostDetails",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a show topic link 1`] = `
Object {
  "action": Object {
    "params": Object {
      "topicName": "topicName",
    },
    "routeName": "TopicFeed",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a thread link 1`] = `
Object {
  "params": Object {
    "id": "1234",
  },
  "routeName": "Thread",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles a topics index link 1`] = `
Object {
  "action": Object {
    "routeName": "Topics",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles an all-communities link 1`] = `
Object {
  "action": Object {
    "params": Object {
      "communityId": "all-communities",
    },
    "routeName": "Feed",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;

exports[`handles an all-communities post link 1`] = `
Object {
  "action": Object {
    "params": Object {
      "id": "1234",
    },
    "routeName": "PostDetails",
    "type": "Navigation/NAVIGATE",
  },
  "routeName": "Main",
  "type": "Navigation/NAVIGATE",
}
`;
